Added manifest.json again. Updated yarn.lock.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta content="Countdown Timer" name="description"/>
     <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
     <title>Timer App</title>
+    <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
